Basic page creation User database creation login & signup creation

--- a/InternetProgrammingProject/Views/Home/Goals.cshtml
+++ b/InternetProgrammingProject/Views/Home/Goals.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
 }
 
-
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -31,9 +30,6 @@
         </nav>
     </header>
     <h1>
-        Welcome to your Dashboard!
+        These are your goals
     </h1>
-    <p>
-
-    </p>
 </body>
