Partial creation of Task and Resource database

--- a/InternetProgrammingProject/Views/Home/LoginSuccessful.cshtml
+++ b/InternetProgrammingProject/Views/Home/LoginSuccessful.cshtml
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <h1>
-        Welcome to your Dashboard!
+        Welcome @ViewBag.FirstName @ViewBag.LastName to your Dashboard!
     </h1>
     <p>
 
